# kotlin-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  extension.toml  prek.toml  prompt.md
.github/workflows/: ci.yml  release.yml
.tickets/: ka-wlod.md
docs/: INDEX.md  architecture.md  command-code-actions.md  common-workflows.md  competitive-landscape.md  compiler-integration.md  development-commands.md  distribution.md  github-cli.md  lsp-protocol.md  risks.md  testing.md  zed-cli.md
languages/kotlin/: highlights.scm  outline.scm  runnables.scm  textobjects.scm
languages/pebble/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  overrides.scm
plans/active/: documentation-sync.md  fix-bridge-channel.md  fixture-parity.md  gradle-kts-support.md  kotlin-version-selection.md  pebble-support.md  project-wide-diagnostics.md  session-file-leak.md  sidecar-reliability.md  spring-boot-annotations.md  v1-roadmap-remaining.md  v1-roadmap.md
plans/completed/: research.md  (+17 more)
protocol/: analyzer-commands.json
scripts/: build-extension.sh  check-version-sync.sh  install-dev-runtime.sh  rebuild-dev.sh  set-version.sh  test-detailed.sh  test-lsp-manually.py  test-simple.sh  test-with-debug.sh  test-with-logs.sh  verify-bridge-fixes.sh  verify-tom24-fallback.py
server/: Cargo.toml
server/src/: bridge.rs  config.rs  error.rs  jsonrpc.rs  main.rs  project.rs  runtime.rs  server.rs  state.rs
server/tests/: integration_test.rs
sidecar/: build.gradle.kts  settings.gradle.kts
src/: lib.rs
tests/: integration_test.rs
(+112 files in other folders)
