[package]
name = "kotlin-analyzer-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "kotlin-analyzer"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"

[features]
integration = []
